--- a/functional_doc.html
+++ b/functional_doc.html
@@ -352,23 +352,22 @@ display: none;
 </div>
 
 
-<p>Documentation Fonctionnelle (Guide Utilisateur)</p>
+<p>Documentation Fonctionnelle: Guide Utilisateur</p>
 <p>Application d’Exploration DPE</p>
 <ol style="list-style-type: decimal">
 <li>Objectif de l’Application</li>
 </ol>
 <p>En complément du rapport d’analyse statique, GreenTech Solutions met
-à la disposition d’Enedis un tableau de bord interactif (Application
-Shiny). Cet outil permet d’explorer les données de manière dynamique et
-de mener vos propres analyses exploratoires.</p>
+à votre disposition un tableau de bord interactif. Cet outil permet
+d’explorer les données de manière dynamique et de mener vos propres
+analyses exploratoires.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Accès et Connexion</li>
 </ol>
 <p>L’application est protégée par un mot de passe pour garantir la
 confidentialité de l’analyse.</p>
-<p>Utilisateur : admin</p>
-<p>Mot de passe : on est pas les meilleurs mais pas les pires non
-plus</p>
+<p>Utilisateur : greentech</p>
+<p>Mot de passe : pas les meilleurs mais pas les pires non plus</p>
 <ol start="3" style="list-style-type: decimal">
 <li>Fonctionnalités Principales</li>
 </ol>
