functional doc edited

--- a/functional_doc.html
+++ b/functional_doc.html
@@ -352,8 +352,9 @@ display: none;
 </div>
 
 
-<p>Documentation Fonctionnelle: Guide Utilisateur</p>
-<p>Application d’Exploration DPE</p>
+<div id="documentation-fonctionnelle-guide-utilisateur" class="section level1">
+<h1>Documentation Fonctionnelle: Guide Utilisateur</h1>
+<p><strong>Application d’Exploration DPE</strong></p>
 <ol style="list-style-type: decimal">
 <li>Objectif de l’Application</li>
 </ol>
@@ -373,7 +374,7 @@ confidentialité de l’analyse.</p>
 </ol>
 <p>L’application est structurée en plusieurs onglets, accessibles depuis
 le menu de gauche.</p>
-<p>Onglet 1 : Comparaison Étiquettes</p>
+<p><strong><em>Onglet 1 : Comparaison Étiquettes</em></strong></p>
 <p>Cet onglet est l’écran principal. Il vous permet de :</p>
 <p>Filtrer les données :</p>
 <p>Type DPE : Isoler les logements “Neufs” ou “Existants”, ou voir
@@ -391,7 +392,7 @@ sélectionné.</p>
 <p>Analyser l’Évolution : Le graphique en ligne du bas vous permet de
 choisir une étiquette DPE (ex: “F”) et de voir son évolution (combien
 ont été enregistrés) mois par mois.</p>
-<p>Onglet 2 : Variables Explicatives</p>
+<p><strong><em>Onglet 2 : Variables Explicatives</em></strong></p>
 <p>Cet onglet vous aide à comprendre pourquoi un logement a une certaine
 note.</p>
 <p>Top 3 Énergies de Chauffage : Montre les types de chauffage les plus
@@ -401,19 +402,20 @@ corrélation entre une mauvaise isolation et une mauvaise note DPE.</p>
 <p>Corrélation Variables : Un outil avancé vous permettant de croiser
 deux variables numériques (par ex: “Surface habitable”
 vs. “Consommation”) pour trouver des corrélations.</p>
-<p>Onglet 3 : Carte DPE</p>
+<p><strong><em>Onglet 3 : Carte DPE</em></strong></p>
 <p>Cet onglet affiche une carte interactive (via Leaflet) de tous les
 logements de votre sélection.</p>
 <p>Les points sont colorés par étiquette DPE (du vert au rouge).</p>
 <p>Vous pouvez zoomer et cliquer sur les “clusters” (groupes de points)
 pour voir les DPE dans une ville ou un quartier spécifique.</p>
-<p>Onglet 4 : Données Brutes</p>
+<p><strong><em>Onglet 4 : Données Brutes</em></strong></p>
 <p>Cet onglet affiche un tableau de données filtrées.</p>
 <p>Vous pouvez trier les colonnes en cliquant sur les en-têtes.</p>
 <p>Vous pouvez utiliser le bouton “Exporter CSV” pour télécharger une
 copie des données que vous avez filtrées.</p>
-<p>Onglet 5 : Contexte</p>
+<p><strong><em>Onglet 5 : Contexte</em></strong></p>
 <p>Rappelle les sources des données (ADEME).</p>
+</div>
 
 
 
